# phnt-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/phnt-bindgen/: Cargo.toml
crates/phnt-bindgen/src/: constants.rs  ctype.rs  driver.rs  emit.rs  ir.rs  lib.rs  main.rs  manifest.rs  matrix.rs  merge.rs  universe.rs  verify.rs
src/: build.rs
