[package]
name = "phnt-bindgen"
version = "0.0.0"
edition = "2024"
publish = false
license = "MIT"
description = "Faithful multi-configuration FFI binding generator for the phnt native Windows headers (replaces bindgen)."

[[bin]]
name = "phnt-bindgen"
path = "src/main.rs"

[lib]
name = "phnt_bindgen"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clang-ast = "0.1.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Emission stack (§5/§6). Wired now so the skeleton is complete; used from M1 on.
proc-macro2 = "1"
quote = "1"
syn = { version = "3", features = ["full", "parsing", "printing", "extra-traits"] }
prettyplease = "0.3"
